Tried to align items in center

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="quiz_game.js"></script>
 
 	<body>
+		<center id="middle">
 		<div class="block">
 		<div>
 			<h3>Player 1 Log In For the Game</h3>
@@ -29,6 +30,6 @@
 		<br>
 		</div>
 		<br>
-
+</center>
 	</body>
 </html>
