Completed Part 2 Of the project

--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <html>
-	<head>
-		<title>Math Quiz!</title>
-	</head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jqueery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="quiz_game.css">
-	<script src="quiz_game.js"></script>
 
-	<body>
+<head>
+	<title>Math Quiz!</title>
+</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jqueery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="quiz_game.css">
+<script src="quiz_game_login.js"></script>
+<body>
+	<h4 id="player1_name"></h4> <span id="player1_score"></span>
+	<br>
+	<h4 id="player2_name"></h4> <span id="player2_score"></span>
+	<div class="container">
 		<center id="middle">
-		<div class="block">
-		<div>
-			<h3>Player 1 Log In For the Game</h3>
-			<label>Username:</label>			
-			<input type="text" id="player_1_name">
-		</div>
-		<br>
-		<div>
-			<h3>Player 2 Log In For the Game</h3>
-			<label>Username:</label>
-			<input type="text" id="player_2_name">
-		</div>
-		<br>
-		<div>
-			<button id="Login" onclick="adduser()">Log In</button>
+			<h2 style="color: white;"> The Math Quiz Game!</h2>
+			<div class="block">
+				<div>
+					<h3>Player 1 Log In For the Game</h3>
+					<label>Username:</label>
+					<input type="text" id="player1_name">
+				</div>
+				<br>
+				<div>
+					<h3>Player 2 Log In For the Game</h3>
+					<label>Username:</label>
+					<input type="text" id="player2_name">
+				</div>
+				<br>
+					<button id="Login" onclick="addUser()">Log In</button>
+				<br>
 			</div>
-		<br>
-		</div>
-		<br>
-</center>
-	</body>
+			<br>
+		</center>
+	</div>
+</body>
 </html>
