--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jqueery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css" href="quiz_game.css">
 <script src="quiz_game_login.js"></script>
@@ -20,16 +20,16 @@
 				<div>
 					<h3>Player 1 Log In For the Game</h3>
 					<label>Username:</label>
-					<input type="text" id="player1_name">
+					<input type="text" id="player1_name" class="form-control">
 				</div>
 				<br>
 				<div>
 					<h3>Player 2 Log In For the Game</h3>
 					<label>Username:</label>
-					<input type="text" id="player2_name">
+					<input type="text" id="player2_name" class="form-control">
 				</div>
 				<br>
-					<button id="Login" onclick="addUser()">Log In</button>
+					<button id="Login" onclick="addUsers()">Log In</button>
 				<br>
 			</div>
 			<br>
